// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Command: move > move dir and sub-dir with --source flag 1`] = `
"[32minfo[39m:    @rehearsal/move 2.0.1-beta
[STARTED] Initialize
[SUCCESS] Initialize
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] /src/index.js -> /src/index.ts
[DATA] /src/foo/baz.js -> /src/foo/baz.ts
[DATA] /src/foo/biz.js -> /src/foo/biz.ts
[DATA] /src/foo/e.gjs -> /src/foo/e.gts
[DATA] /src/foo/buz/biz.js -> /src/foo/buz/biz.ts
[DATA] 
[SUCCESS] Executing git mv"
`;

exports[`Command: move > move file with --source flag 1`] = `
"[32minfo[39m:    @rehearsal/move 2.0.1-beta
[STARTED] Initialize
[SUCCESS] Initialize
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] /src/foo/baz.js -> /src/foo/baz.ts
[DATA] 
[SUCCESS] Executing git mv"
`;

exports[`Command: move > move package with --childPackage flag 1`] = `
"[32minfo[39m:    @rehearsal/move 2.0.1-beta
[STARTED] Initialize
[SUCCESS] Initialize
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] /module-a/index.js -> /module-a/index.ts
[DATA] /module-a/src/baz.js -> /module-a/src/baz.ts
[DATA] /module-a/src/foo.js -> /module-a/src/foo.ts
[DATA] 
[SUCCESS] Executing git mv"
`;
